---
title: Datenbank
config:
    layout: elk
---

erDiagram
    direction TB
    
    TRANSACTION }o--o| TAG_ASSIGNMENT : "aquire infos"
    TAG_ASSIGNMENT }o--|| CUSTOMER: "belongs to"
    CUSTOMER ||--|| ADDRESS : "has"
    CUSTOMER ||--|| CONTACT : "has"
    CUSTOMER ||--o| COMPANY_DATA : "has"
    CUSTOMER ||--o| PERSONAL_DATA : "has"
    CUSTOMER ||--o{ PRICE_ASSIGNMENT: "has"

    

    TRANSACTION{
        String id
        String tagID 
        String wb_id FK
        int start_date "=> used to match tag assignment"
        int stop_date 
        int power_usage
    }

    TAG{
        String tagID
    }
    
    TAG_ASSIGNMENT{
        String tagID PK
        int date_from PK
        int? date_to "null => until today"
        int customer_id FK
        int? user_id FK
    }

    
    CUSTOMER{
        String id PK
        String address_id FK
        String contact_id FK

        String? company_id FK
        String? personal_id FK

    }

    PRICE_ASSIGNMENT{
        String customer_id PK,FK
        int date_from PK
        int price "centicents"
        int? date_to
    }


    COMPANY_DATA{
        String customer_id Pk, FK
        String company_name
        String? company_addition
    }
    PERSONAL_DATA{
        String customer_id Pk, FK
        String prename
        String surname

        String gemder

    }

    ADDRESS{
        String customer_id Pk, FK
        String street
        String house_number
        String? postcode
        String city
        String country
    }

    CONTACT{
        String customer_id Pk, FK
        String phone
        String mobile
        String fax
        String email
    }
